--- a/app/src/main/res/layout/menu_popup_inter.xml
+++ b/app/src/main/res/layout/menu_popup_inter.xml
@@ -76,6 +76,7 @@
                 android:text="WESTERN UNION"
                 android:textSize="11sp"
                 android:textStyle="bold"
+                android:textAlignment="center"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -118,6 +119,7 @@
                 android:text="MONEYGRAM"
                 android:textSize="11sp"
                 android:textStyle="bold"
+                android:textAlignment="center"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -162,6 +164,7 @@
                 android:text="RIA"
                 android:textSize="11sp"
                 android:textStyle="bold"
+                android:textAlignment="center"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
