--- a/app/src/main/res/layout/fragment_assistant_operation_moov.xml
+++ b/app/src/main/res/layout/fragment_assistant_operation_moov.xml
@@ -16,6 +16,7 @@
             android:layout_height="match_parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/constraint2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -56,11 +57,36 @@
                     style="@style/TitleFont"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/national_moov"
                     android:layout_marginHorizontal="20dp"
                     android:layout_marginVertical="10dp"
+                    android:text="@string/national_moov"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/btnCancelOperationMoov" />
+
+                <Button
+                    android:id="@+id/historiqueMoov"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:backgroundTint="@color/white"
+                    android:text="Historique"
+                    android:textColor="#038DF6"
+                    android:textStyle="bold"
+                    android:layout_marginTop="10dp"
+                    app:layout_constraintStart_toStartOf="@+id/textView2"
+                    app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+                <Button
+                    android:id="@+id/openSMSMoov"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:backgroundTint="@color/white"
+                    android:text="SMS"
+                    android:textColor="#038DF6"
+                    android:textStyle="bold"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginStart="7dp"
+                    app:layout_constraintStart_toEndOf="@+id/historiqueMoov"
+                    app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -68,12 +94,12 @@
                 android:id="@+id/cardView5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="100dp"
+                android:layout_marginTop="10dp"
                 app:cardCornerRadius="15dp"
                 app:cardElevation="0dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toBottomOf="@+id/constraint2">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -103,30 +129,6 @@
                             app:layout_constraintStart_toStartOf="@+id/textView20"
                             app:layout_constraintTop_toBottomOf="@+id/textView20" />
 
-                        <Button
-                            android:id="@+id/historiqueMoov"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Historique"
-                            android:textColor="#038DF6"
-                            android:textStyle="bold"
-                            android:backgroundTint="@color/white"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintTop_toTopOf="@+id/textView20" />
-
-                        <Button
-                            android:id="@+id/openSMSMoov"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="5dp"
-                            android:backgroundTint="@color/white"
-                            android:text="Lire SMS"
-                            android:textColor="#038DF6"
-                            android:textStyle="bold"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toStartOf="@+id/historiqueMoov"
-                            app:layout_constraintTop_toBottomOf="@+id/historiqueMoov" />
-
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <TextView
@@ -140,7 +142,7 @@
                         android:padding="2dp"
                         android:layout_marginTop="5dp"
                         android:layout_width="match_parent"
-                        android:layout_height="43dp">
+                        android:layout_height="55dp">
 
                         <androidx.cardview.widget.CardView
                             android:layout_width="wrap_content"
@@ -187,7 +189,7 @@
                         android:padding="2dp"
                         android:layout_marginTop="5dp"
                         android:layout_width="match_parent"
-                        android:layout_height="43dp">
+                        android:layout_height="55dp">
 
                         <androidx.cardview.widget.CardView
                             android:layout_width="wrap_content"
@@ -234,7 +236,7 @@
                         android:padding="2dp"
                         android:layout_marginTop="5dp"
                         android:layout_width="match_parent"
-                        android:layout_height="43dp">
+                        android:layout_height="55dp">
 
                         <androidx.cardview.widget.CardView
                             android:layout_width="wrap_content"
