--- a/app/src/main/res/layout/fragment_assistant_operation_mtn.xml
+++ b/app/src/main/res/layout/fragment_assistant_operation_mtn.xml
@@ -2,7 +2,6 @@
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -16,6 +15,7 @@
             android:layout_height="match_parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/constraint3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -62,18 +62,42 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/btnCancelOperationMtn" />
 
+                <Button
+                    android:id="@+id/historiqueMtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/white"
+                    android:text="Historique"
+                    android:textColor="#038DF6"
+                    android:textStyle="bold"
+                    android:layout_marginTop="10dp"
+                    app:layout_constraintStart_toStartOf="@+id/textView2"
+                    app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+                <Button
+                    android:id="@+id/openSMSMtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/white"
+                    android:text="SMS"
+                    android:textColor="#038DF6"
+                    android:textStyle="bold"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginStart="7dp"
+                    app:layout_constraintStart_toEndOf="@+id/historiqueMtn"
+                    app:layout_constraintTop_toBottomOf="@+id/textView2" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardView5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="100dp"
+                android:layout_marginTop="10dp"
                 app:cardCornerRadius="15dp"
                 app:cardElevation="0dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toBottomOf="@+id/constraint3">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -102,30 +126,6 @@
                             android:textColor="@color/gray_color"
                             app:layout_constraintStart_toStartOf="@+id/textView20"
                             app:layout_constraintTop_toBottomOf="@+id/textView20" />
-
-                        <Button
-                            android:id="@+id/historiqueMtn"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Historique"
-                            android:textColor="#038DF6"
-                            android:textStyle="bold"
-                            android:backgroundTint="@color/white"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintTop_toTopOf="@+id/textView20" />
-
-                        <Button
-                            android:id="@+id/openSMSMtn"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="5dp"
-                            android:backgroundTint="@color/white"
-                            android:text="Lire SMS"
-                            android:textColor="#038DF6"
-                            android:textStyle="bold"
-                            app:layout_constraintEnd_toEndOf="@+id/historiqueMtn"
-                            app:layout_constraintStart_toStartOf="@+id/historiqueMtn"
-                            app:layout_constraintTop_toBottomOf="@+id/historiqueMtn" />
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
                     <TextView
