--- a/app/src/main/res/layout/fragment_sms.xml
+++ b/app/src/main/res/layout/fragment_sms.xml
@@ -21,7 +21,7 @@
         android:id="@+id/textView19"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Message MTN MONEY"
+        android:text="SMS MTN MONEY"
         android:textSize="18sp"
         android:textStyle="bold"
         android:layout_marginTop="20dp"
