--- a/app/src/main/res/layout/fragment_sms_moov.xml
+++ b/app/src/main/res/layout/fragment_sms_moov.xml
@@ -20,7 +20,7 @@
         android:id="@+id/textView19"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Message MOOV MONEY"
+        android:text="SMS MOOV MONEY"
         android:textSize="18sp"
         android:textStyle="bold"
         android:layout_marginTop="20dp"
