--- a/app/src/main/res/layout/menu_popup_compte1.xml
+++ b/app/src/main/res/layout/menu_popup_compte1.xml
@@ -77,6 +77,7 @@
                 android:text="WAVE"
                 android:textSize="11sp"
                 android:textStyle="bold"
+                android:textAlignment="center"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -122,6 +123,7 @@
                 android:text="MTN MONEY"
                 android:textSize="11sp"
                 android:textStyle="bold"
+                android:textAlignment="center"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
