--- a/app/src/main/res/layout/menu_popup_compte2.xml
+++ b/app/src/main/res/layout/menu_popup_compte2.xml
@@ -75,6 +75,7 @@
                 android:text="ORANGE MONEY"
                 android:textSize="11sp"
                 android:textStyle="bold"
+                android:textAlignment="center"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -119,6 +120,7 @@
                 android:text="TRESOR MONEY"
                 android:textSize="11sp"
                 android:textStyle="bold"
+                android:textAlignment="center"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -164,6 +166,7 @@
                 android:text="MOOV MONEY"
                 android:textSize="11sp"
                 android:textStyle="bold"
+                android:textAlignment="center"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
