--- a/app/src/main/res/layout/activity_orange_redirection.xml
+++ b/app/src/main/res/layout/activity_orange_redirection.xml
@@ -12,6 +12,16 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/backButtonToHome"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_margin="10dp"
+                android:src="@drawable/baseline_arrow_back_24"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
+
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardOrangeRedirection"
                 android:layout_width="match_parent"
@@ -22,7 +32,7 @@
                 android:layout_marginHorizontal="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toBottomOf="@+id/backButtonToHome">
 
                 <LinearLayout
                     android:layout_width="match_parent"
