--- a/app/src/main/res/layout/fragment_assistant_operation_mtn.xml
+++ b/app/src/main/res/layout/fragment_assistant_operation_mtn.xml
@@ -214,6 +214,7 @@
                             android:hint="Téléphone"
                             android:inputType="phone"
                             android:paddingStart="30dp"
+                            style="@style/inputFont"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -259,6 +260,7 @@
                             android:hint="Montant"
                             android:inputType="number"
                             android:paddingStart="30dp"
+                            style="@style/inputFont"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
