--- a/app/src/main/res/layout/fragment_assistant_settings.xml
+++ b/app/src/main/res/layout/fragment_assistant_settings.xml
@@ -223,22 +223,7 @@
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
-            <Button
-                android:id="@+id/assistant_settings_logout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:backgroundTint="@color/white"
-                android:text="@string/settings_page_logout"
-                android:textStyle="bold"
-                android:textSize="17sp"
-                android:textColor="@color/color_item_amount"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginTop="30dp"
-                android:layout_marginBottom="20dp"
-                app:layout_constraintTop_toBottomOf="@+id/cardSC" />
+
 
             <TextView
                 android:id="@+id/titleDoubleCompte"
@@ -288,6 +273,61 @@
                     android:textColor="@color/black"
                     android:textStyle="bold" />
             </androidx.cardview.widget.CardView>
+
+            <Button
+                android:id="@+id/assistant_settings_logout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
+                android:backgroundTint="@color/white"
+                android:text="@string/settings_page_logout"
+                android:textStyle="bold"
+                android:textSize="17sp"
+                android:textColor="@color/color_item_amount"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="20dp"
+                app:layout_constraintTop_toBottomOf="@+id/cardSC" />
+
+            <View
+                android:id="@+id/view"
+                android:layout_width="1dp"
+                android:layout_height="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="30dp"
+                android:background="@color/gray_color"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/assistant_settings_logout" />
+
+            <TextView
+                android:id="@+id/cgu_link"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:text="Conditions Générales"
+                android:textStyle="bold"
+                android:textColor="#979999"
+                android:textSize="10sp"
+                app:layout_constraintBottom_toBottomOf="@+id/view"
+                app:layout_constraintEnd_toStartOf="@+id/view"
+                app:layout_constraintTop_toTopOf="@+id/view" />
+
+            <TextView
+                android:id="@+id/confidentialite_link"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:text="Avis de Confidentialité"
+                android:textStyle="bold"
+                android:textColor="#979999"
+                android:textSize="10sp"
+                app:layout_constraintBottom_toBottomOf="@+id/view"
+                app:layout_constraintStart_toEndOf="@+id/view"
+                app:layout_constraintTop_toTopOf="@+id/view" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
