--- a/app/src/main/res/layout/fragment_assistant_home.xml
+++ b/app/src/main/res/layout/fragment_assistant_home.xml
@@ -114,7 +114,7 @@
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_marginTop="7dp"
-                    android:src="@drawable/baseline_cloud_sync_24"
+                    android:src="@drawable/terre"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -122,7 +122,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="International"
+                    android:text="Inter"
                     android:textSize="13sp"
                     android:textStyle="bold"
                     android:ellipsize="end"
