--- a/app/src/main/res/layout/fragment_assistant_home.xml
+++ b/app/src/main/res/layout/fragment_assistant_home.xml
@@ -114,7 +114,7 @@
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_marginTop="7dp"
-                    android:src="@drawable/terre"
+                    android:src="@drawable/_8615"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
