--- a/app/src/main/res/drawable/backgroundgradientgray.xml
+++ b/app/src/main/res/drawable/backgroundgradientgray.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape
-    android:shape="rectangle"
+<shape android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:startColor="#F1F1F1"
         android:endColor="#E3E3E3"
-        android:angle="-70"/>
+        android:angle="-90"/>
 </shape>
