--- a/app/src/main/res/layout/fragment_assistant_operation_tresor.xml
+++ b/app/src/main/res/layout/fragment_assistant_operation_tresor.xml
@@ -236,17 +236,23 @@
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <CheckBox
+                        android:id="@+id/origine_check_tresor"
                         android:layout_marginTop="5dp"
-                        android:textSize="15sp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Origine des fonds"/>
 
                     <EditText
-                        android:inputType="textLongMessage"
+                        android:id="@+id/origine_fond_tresor"
+                        android:hint="Ecrire..."
+                        android:inputType="textMultiLine"
+                        android:lines="8"
+                        android:maxLines="10"
+                        android:minLines="6"
+                        android:visibility="gone"
+                        android:scrollbars="vertical"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="Ecrire ici..."/>
+                        android:layout_height="100dp"/>
 
                     <Button
                         android:id="@+id/uploadPhotoTresor"
